--- a/src/components/RemainingUntilChristmas/RemainingUntilChristmas.css
+++ b/src/components/RemainingUntilChristmas/RemainingUntilChristmas.css
@@ -1,55 +1,31 @@
-.Header {
-    position: relative;
-    font-size: medium;
-}
-
-.Countdown {
-    font-size: large;
-    font-weight: 400;
-}
-
-.RightText {
-    text-align: right;
-}
-
-.parallax {
-    /* The image used */
-    /* Set a specific height */
-    height: 100vh;
+.remaining-center {
+    text-align: center;
     width: 100%;
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
+    border-spacing: 5px;
+    margin: 0.3em 0 0.2em;
+    font-size: 300%;
+    display: table;
+    table-layout: fixed;
 }
 
-.CenterContainer {
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 3;
+.remaining-center .col {
+    align-items: center;
 }
 
-.center {
-    color: #ffffff;
-    font-weight: 400;
-    font-size: 16px;
+.remaining-center span {
+    display: table-cell;
+    font-weight: bolder;
+    text-align: center;
+    color: #fff;
+    line-height: 80%;
+    padding: 0.4em 0.1em 0.1em;
+    margin: 0 0.05em 0.2em;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.85);
 }
 
-.test:before {
-    background: -moz-linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
-    background: -webkit-linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 75%, rgba(0, 0, 0, 0.3) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00000000", endColorstr="#4d000000", GradientType=0);
-    bottom: 0;
-    content: '';
-    display: block;
-    height: 40%;
-    left: 0;
-    position: absolute;
-    right: 0;
-    z-index: 2;
+.remaining-countdown {
+    justify-content: center;
+    display: flex;
 }
